<?xml version="1.0"?>

<project>
    <modelVersion>4.0.0</modelVersion>
    <groupId>br.ipt.soa</groupId>
    <artifactId>bestdog.bpel</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>ODE :: BPEL Sample</name>
    <packaging>war</packaging>

    <properties>
        <ode.version>1.3.6</ode.version>
        <spring.version>2.5.6</spring.version>
        <junit.version>4.4</junit.version>
        <h2.version>1.1.117</h2.version>
    </properties>

    <dependencies>      
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>${spring.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.ode</groupId>
            <artifactId>apache-ode-war</artifactId>
            <version>${ode.version}</version>
            <type>zip</type>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>unpack</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>unpack</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>org.apache.ode</groupId>
                                    <artifactId>apache-ode-war</artifactId>
                                    <version>${ode.version}</version>
                                    <type>zip</type>
                                    <includes>**/*.war</includes>
                                    <outputDirectory>${project.build.directory}/ode</outputDirectory>
                                    <destFileName>ode.war</destFileName>
                                </artifactItem>
                            </artifactItems>
                            <stripVersion>true</stripVersion>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>1.7</version>
                <executions>
                    <execution>
                        <id>unpack_ode</id>
                        <phase>prepare-package</phase>
                        <configuration>
                            <tasks>
                                <echo message="unpacking ode.war" />
                                <unzip src="${project.build.directory}/ode/apache-ode-war-${ode.version}/ode.war" dest="${project.build.directory}/ode" />
                            </tasks>
                        </configuration>
                        <goals>
                            <goal>run</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>            
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <systemPropertyVariables>
                        <org.apache.ode.autoRetireProcess>true</org.apache.ode.autoRetireProcess>
                    </systemPropertyVariables>
                    <argLine>-Xms512M -Xmx512M -XX:MaxPermSize=512M</argLine>
                    <skipTests>true</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.tomcat.maven</groupId>
                <artifactId>tomcat7-maven-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                     <path>/ode</path>
                     <warSourceDirectory>target/ode</warSourceDirectory>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
